--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,16 +1,20 @@
-<ion-header [translucent]="true">
+<ion-header>
   <app-header [pageTitle]="pageTitle"></app-header>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+  <!-- el ngIf = es para que nos permita verificar si existe el componente creado -->
+  <ion-list *ngIf=listadoUser> 
+    <!-- el ngFor= es para agregar elemento pero sin sabes la cantidad exacta -->
+     <ion-item *ngFor='let personaje of listadoUser'>
+       <ion-avatar slot="start">
+         <img [src]='personaje.avatar' alt="">
+       </ion-avatar>
+       <ion-lebel>
+         <h3>{{personaje.first_name}}</h3>
+         <h4>{{personaje.last_name}}</h4>
+       </ion-lebel>
+       <ion-icon class="ff" name="arrow-forward"></ion-icon>
+     </ion-item>
+  </ion-list>
 </ion-content>
